kube-nerdrack/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hugo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hugo
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: hugo
        image: da3dalus/hugo:test
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        command: ["hugo"]
        args: ["server", "-p=443", "--bind=0.0.0.0", "--baseUrl=https://nerdrack.com", "-s=/tmp/src/nerdrack"]
        volumeMounts:
        - name: source-content
          mountPath: "/tmp/src"
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: source-content
        emptyDir: {}
