kube-nerdrack/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hugo
spec:
  selector:
    app: hugo
  ports:
  - name: hugo
    port: 443 
    targetPort: 443
