kube-nerdrack/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nerdrack
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nerdrack.com 
    http:
      paths:
      - backend:
          serviceName: hugo
          servicePort: 443
